Made help button more visible and fixed bug where volume slider did not work in mobile

--- a/public/css/controls/search.css
+++ b/public/css/controls/search.css
@@ -107,6 +107,10 @@
     width: 100%;
 }
 
+#chkHelp {
+    border: 2px solid #fff;
+}
+
 @-webkit-keyframes slide-down {
   0% {
     opacity: 0;
